kubernetes/ckad/nginx-app/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        configHash: ""
    spec:
      volumes:
      - name: webcontent-example
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-configmap
          items:
            - key: mime.types
              path: mime.types
            - key: nginx.conf
              path: nginx.conf
            - key: default.conf
              path: default.conf
            - key: example.com.conf
              path: example.com.conf
      containers:
      - image: registry.fritz.box/arm64v8/nginx
        name: nginx
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx
            readOnly: false
          - name: webcontent-example
            mountPath: /example.com
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 3
          periodSeconds: 60
