kubernetes/ckad/nginx-app/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: nginx
  namespace: nginx
spec:
  rules:
  - host: nginx.fritz.box
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              name: https
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - nginx.fritz.box
